# Starbound

./: .gitignore  README.md
.github/workflows/: build_macos.yml
attic/launcher/: Launcher.cpp  Makefile
cmake/: FindJeMalloc.cmake  FindSDL3.cmake  FindSteamApi.cmake
lib/osx/: libSDL3.dylib
scripts/linux/: ycm_extra_conf.py
scripts/osx/: app-builder.sh  build.command  copy-to-steam.sh  sbinit.config  sbinit.config.debug  setup-and-build.sh  setup.sh
scripts/windows/: build.bat  compile_game.bat  sbinit.config  setup_ninja.bat
source/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  vcpkg-configuration.json  vcpkg.json
source/application/: CMakeLists.txt  StarApplication.hpp  StarApplicationController.hpp  StarDesktopService_pc_steam.hpp  StarInputEvent.hpp  StarMainApplication.hpp  StarMainApplication_sdl.cpp  StarP2PNetworkingService_pc.cpp  StarP2PNetworkingService_pc.hpp  StarPlatformServices_pc.hpp  StarRenderer.hpp  StarRenderer_opengl20.cpp  StarRenderer_opengl20.hpp  StarStatisticsService_pc_steam.hpp  StarTextureAtlas.hpp  StarUserGeneratedContentService_pc_steam.hpp
source/base/: StarAnimatedPartSet.hpp  StarAssetSource.hpp  StarAssets.hpp  StarBlocksAlongLine.hpp  StarCellularLightArray.hpp  StarCellularLighting.hpp  StarCellularLiquid.hpp  StarConfiguration.hpp  StarDirectoryAssetSource.hpp  StarMixer.hpp  StarPackedAssetSource.hpp  StarVersion.hpp  StarVersionOptionParser.hpp  StarWorldGeometry.hpp
source/client/: CMakeLists.txt  StarClientApplication.cpp  StarClientApplication.hpp
source/core/: StarAStar.hpp  StarAlgorithm.hpp  StarAtomicSharedPtr.hpp  StarAudio.hpp  StarBTree.hpp  StarBTreeDatabase.hpp  StarBiMap.hpp  StarBlockAllocator.hpp  StarBuffer.hpp  StarBytes.hpp  StarCasting.hpp  StarColor.hpp  StarCompression.hpp  StarConfig.hpp  StarDataStream.hpp  StarDataStreamDevices.hpp  StarDataStreamExtra.hpp  StarDynamicLib.hpp  StarEither.hpp  StarEncode.hpp  StarException.hpp  StarFile.hpp  StarFlatHashMap.hpp  StarFlatHashSet.hpp  StarFlatHashTable.hpp  StarFont.hpp  StarFormat.hpp  StarFormattedJson.hpp  StarHash.hpp  StarHostAddress.hpp  StarIdMap.hpp  StarImage.cpp  StarImage.hpp  StarImageProcessing.hpp  StarJson.hpp  StarJsonBuilder.hpp  StarJsonExtra.hpp  StarJsonParser.hpp  StarJsonPatch.hpp  StarJsonPath.hpp  (+73 more)
source/frontend/: StarActionBar.hpp  StarAiInterface.hpp  StarBookmarkInterface.hpp  StarCharSelection.hpp  StarChat.hpp  StarChatBubbleManager.hpp  StarChatBubbleSeparation.hpp  StarCinematic.hpp  StarClientCommandProcessor.hpp  StarCodexInterface.hpp  StarConfirmationDialog.hpp  StarContainerInteractor.hpp  StarContainerInterface.hpp  StarCraftingInterface.hpp  StarErrorScreen.hpp  StarGraphicsMenu.hpp  StarInterfaceCursor.hpp  StarInventory.hpp  StarItemTooltip.hpp  StarJoinRequestDialog.hpp  StarKeybindingsMenu.hpp  StarMainInterface.cpp  StarMainInterface.hpp  StarMainInterfaceTypes.hpp  StarMainMixer.hpp  StarMerchantInterface.hpp  StarModsMenu.hpp  StarNameplatePainter.hpp  StarOptionsMenu.hpp  StarPopupInterface.hpp  StarQuestIndicatorPainter.hpp  StarQuestInterface.hpp  StarQuestTracker.hpp  StarRadioMessagePopup.hpp  StarScriptPane.hpp  StarSimpleTooltip.hpp  StarSongbookInterface.hpp  StarStatusPane.hpp  StarTeamBar.cpp  StarTeamBar.hpp  (+5 more)
source/game/: StarActorMovementController.cpp  StarActorMovementController.hpp  StarAiDatabase.hpp  StarAiTypes.hpp  StarAmbient.hpp  StarAnimation.hpp  StarArmorWearer.hpp  StarBehaviorDatabase.hpp  StarBiome.hpp  StarBiomeDatabase.hpp  StarBiomePlacement.hpp  StarCelestialCoordinate.hpp  StarCelestialDatabase.hpp  StarCelestialGraphics.hpp  StarCelestialParameters.hpp  StarCelestialTypes.hpp  StarChatAction.hpp  StarChatProcessor.hpp  StarChatTypes.hpp  StarClientContext.hpp  StarCodex.hpp  StarCodexDatabase.hpp  StarCollisionBlock.hpp  StarCollisionGenerator.hpp  StarCommandProcessor.hpp  StarDamage.hpp  StarDamageDatabase.hpp  StarDamageManager.hpp  StarDamageTypes.hpp  StarDanceDatabase.hpp  StarDrawable.hpp  StarDungeonGenerator.hpp  StarDungeonImagePart.hpp  StarDungeonTMXPart.hpp  StarEffectEmitter.hpp  StarEffectSourceDatabase.hpp  StarEmoteProcessor.hpp  StarEntityFactory.hpp  StarEntityMap.hpp  StarEntityRendering.hpp  (+132 more)
source/json_tool/: editor_gui.hpp  json_tool.hpp
source/liquid_test/: CMakeLists.txt  LiquidTest.cpp
source/mod_uploader/: StarModUploader.cpp  StarSPlainTextEdit.hpp
source/platform/: StarDesktopService.hpp  StarP2PNetworkingService.hpp  (+2 more)
source/renderer_test/: CMakeLists.txt  rendererTest.cpp
vcpkg-triplets/: arm64-osx-mixed.cmake  x64-osx-mixed.cmake
(+132 files in other folders)
